samples/_failures_safe/1761359414_d757c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54dd040c.c: In function ‘main’:
./samples/SAFE/__tmp_54dd040c.c:150:17: error: expected expression at end of input
  150 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_54dd040c.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54dd040c.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54dd040c.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54dd040c.c:150:17: error: expected declaration or statement at end of input
